# ROADSOS

./: .gitignore  README.md  antigravity_config.json  app.py  extract.py  extract2.py  main.py  pyproject.toml  ruff.toml  test_search.py
backend/: __init__.py  ai_triage.py  config.py  database.py  decision_engine.py  geocode.py  main.py  models.py  weather.py
core/: config.py  decision_engine.py  edge_handler.py  logger.py  timeout.py  validator.py
data/: demo_data.json  offline_cache.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CommandSearch.tsx  DecisionScreen.tsx  EmergencyButton.tsx  HospitalCard.tsx  SignalSelector.tsx  WeatherBanner.tsx
frontend/src/hooks/: useHaptics.ts  useLocation.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scratch/: extract_prompt.py  master_prompt_extracted.md
scripts/: build_hospital_db.py
services/: ceil.py  ceil_data.json  fetcher.py  geocoder.py
tests/: test_cases.py
